Fix issue with form stretching

--- a/styles.css
+++ b/styles.css
@@ -43,20 +43,33 @@ table {
 }
 
 #container {
+	margin: 20px;
     width: 100%;
     height: 100%;
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 1fr 4fr;
+	grid-template-rows: 1fr;
 }
 
 .bookSubmission {
     display: flex;
 }
 
-form  { display: table;      }
-p     { display: table-row;  }
-label { display: table-cell; }
-input { display: table-cell; }
+form { 
+	display: table; 
+}
+
+p { 
+	display: table-row; 
+}
+
+label { 
+	display: table-cell; 
+}
+
+input { 
+	display: table-cell; 
+}
 
 .labelsDiv, .inputsDiv {
 	display: flex;
